# automirror

./: LICENSE  README.md
automirror/: automirror.cabal  stack.yaml
automirror/app/: Main.hs
automirror/src/: Config.hs  Lib.hs
